[gd_scene load_steps=4 format=3 uid="uid://bqxvhxqxqxqxx"]

[ext_resource type="Script" uid="uid://ddgu4g0ckq107" path="res://algorithms/physicssimulation/fluidsimulation/FluidSimulation.gd" id="1_2aa6c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xqxx"]
albedo_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1xqxx"]
albedo_color = Color(0.5, 0.5, 0.5, 1)

[node name="FluidSimulation" type="Node3D"]
script = ExtResource("1_2aa6c")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.5

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="Environment"]
transform = Transform3D(15, 0, 0, 0, 0.1, 0, 0, 0, 15, 0, -0.05, 0)
material_override = SubResource("StandardMaterial3D_0xqxx")

[node name="Walls" type="Node3D" parent="Environment"]

[node name="WallNorth" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(15, 0, 0, 0, 3, 0, 0, 0, 0.1, 0, 1.5, 7.5)
material_override = SubResource("StandardMaterial3D_1xqxx")

[node name="WallSouth" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(15, 0, 0, 0, 3, 0, 0, 0, 0.1, 0, 1.5, -7.5)
material_override = SubResource("StandardMaterial3D_1xqxx")

[node name="WallEast" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(0.1, 0, 0, 0, 3, 0, 0, 0, 15, 7.5, 1.5, 0)
material_override = SubResource("StandardMaterial3D_1xqxx")

[node name="WallWest" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(0.1, 0, 0, 0, 3, 0, 0, 0, 15, -7.5, 1.5, 0)
material_override = SubResource("StandardMaterial3D_1xqxx")

[node name="FluidParticles" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_vertical = 0

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Fluid Simulation (SPH)
- Smoothed Particle Hydrodynamics
- Realistic fluid behavior
- Pressure and viscosity forces
- Use mouse to rotate camera"
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Reset Fluid"

[node name="PauseButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Pause/Resume"

[node name="ViscositySlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.1
value = 1.0

[node name="ViscosityLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Viscosity: 0.5"

[node name="PressureSlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.1

[node name="PressureLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Pressure: 1.0"
